--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,6 +21,7 @@ jobs:
           cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
       - name: install pip packages
         run: |
+          find . -regex '.*requirements.txt$'
           python -m pip install --upgrade pip
           pip3 install -r requirements.txt
       - name: time003
